--- a/src/css/base.css
+++ b/src/css/base.css
@@ -17,16 +17,16 @@
 }
 
 body {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   min-width: 100vw;
-  min-height: 100vh;
+  min-height: 100vh; */
   margin: 0;
 }
 
-main {
+/* main {
   flex-grow: 1;
 }
 main:has(.back-link) {
   text-align: center;
-}
+} */
