--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,4 +13,5 @@
 /* Sections style */
 @import url('./header.css');
 @import url('./gallery.css');
+@import url('./form.css');
 @import url('./back-link.css');
